# DELULU----ADDONS

./: .gitignore  README.md  addon.manifest.json  addon.manifest.template.json  catalog.json  catalog.sample.json  motherbox.manifest.json
embegator/: Cargo.toml  embegator_out.json  manifest.json
embegator/src/: main.rs  models.rs
flexy/: Cargo.toml  manifest.json
flexy/src/: flixhq.rs  http.rs  main.rs  models.rs  rabbitstream.rs  tmdb.rs
iptv-org/: manifest.json
iptv-org/source/: Cargo.toml
meta-resolver/: Cargo.toml  manifest.json
meta-resolver/src/: main.rs  models.rs
motherbox/: Cargo.toml  manifest.json  research_auth.py
motherbox/src/: auth.rs  crypto.rs  http.rs  main.rs  models.rs  moviebox.rs  proxy.rs  state.rs  tmdb.rs  v3_mobile.rs
omnifetch/: .gitignore  Cargo.toml  manifest.json
omnifetch/src/: main.rs
scripts/: prepare-release.ps1
spectre/: Cargo.toml  in.json  manifest.json  test.js
spectre/src/: main.rs  models.rs  proxy.rs  resolver.rs
src/: main.rs
