[package]
name = "flexy"
version = "1.0.0"
edition = "2021"
description = "FlixHQ/RabbitStream pure API resolver for Delulu"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
base64 = "0.22"
strsim = "0.11"
urlencoding = "2.1"
uuid = { version = "1.8", features = ["v4"] }
url = "2.5"
scraper = "0.19"

# Cryptography for ECDSA P-256 / SHA-256 and AES-256-GCM
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = "0.16"
sha2 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
aes-gcm = "0.10"

[profile.release]
opt-level = "z"
lto = true
strip = true
