[package]
name = "motherbox"
version = "3.0.3"
edition = "2021"
description = "Unified MovieBox stream resolver + embedded CDN reverse proxy"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
base64 = "0.22"
chrono = "0.4"
url = "2.5"
urlencoding = "2.1"
rand = "0.8"
strsim = "0.11"
itertools = "0.12"

# Embedded proxy server
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
bytes = "1"
futures-util = "0.3"

[profile.release]
opt-level = "z"
lto = true
strip = true
