[package]
name = "omnifetch"
version = "1.0.0"
edition = "2021"
description = "Delulu all-in-one media engine — trailer resolution, stream download, and subtitle fetch powered by yt-dlp"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }

[profile.release]
opt-level = "z"
lto = true
strip = true
