[package]
name = "spectre"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream", "cookies"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
regex = "1.10"
base64 = "0.21"
lru = "0.12"
anyhow = "1.0"
futures-util = "0.3"
url = "2.5"
async-trait = "0.1"
once_cell = "1.19"
log = "0.4"
env_logger = "0.11"
